ipython (0.8.2.dfsg-3) UNRELEASED; urgency=low

  [ Norbert Tretkowski ]
  * Remove myself from uploaders.

  [ Sandro Tosi ]
  * debian/control
    - removed Suggests on python-numeric and added for python-numpy (Closes:
      #478449)

 -- Sandro Tosi <matrixhasu@gmail.com>  Tue, 29 Apr 2008 19:40:01 +0200

ipython (0.8.2.dfsg-2) unstable; urgency=low

  * debian/rules:
    - Creating /usr/bin/ipythonX.Y wrappers for all python versions. Thanks to
      martin f. krafft (Closes: #461188).

 -- Bernd Zeimetz <bzed@debian.org>  Thu, 17 Jan 2008 11:17:49 +0100

ipython (0.8.2.dfsg-1) unstable; urgency=low

  [ Bernd Zeimetz ]
  * New upstream version. Manually adding the source of the documentation to
    the tarball. It will be shipped by upstream with the next release.
    (Closes: #458383)
  * debian/uscan-dfsg-clean.sh, debian/watch, debian/rules:
    - Adding uscan-dfsg-clean.sh as helper for uscan to remove non-dfsg-free
      material from the tarball. Adding a get-orig-source rule to debian/rules
      which runs uscan.
  * debian/control:
    - Updating my email address.
    - Updating Standards-Version to 3.7.3.
  * debian/copyright:
    - Updating the file to reflect the current copyrights and licenses.
  * debian/patches/00dpatch.conf:
    - Adding file.
  * debian/patches/{03_ipy_gnuglobal,04_remove_shebang}.dpatch:
    - Updating patches.
  * debian/patches/05_no_manual_dir.dpatch:
    - Adding patch to stop setup.py from creating empty directories.

  [ Sandro Tosi ]
  * debian/control
    - uniforming Vcs-Browser field

 -- Bernd Zeimetz <bzed@debian.org>  Wed, 09 Jan 2008 14:11:20 +0100

ipython (0.8.1-2) unstable; urgency=low

  [ Piotr Ożarowski ]
  * Homepage field added
  * Rename XS-Vcs-* fields to Vcs-* (dpkg supports them now)
  * Add 04_remove_shebang patch
  * Removing lintian overrides, adding proper patches instead.

  [ Bernd Zeimetz ]
  * Replacing Recommends by Suggests to stop ipython from installing ~500MB