@@ -13,14 +13,13 @@ install/ipython::
 	rm $(CURDIR)/debian/ipython/usr/share/doc/ipython/README_Windows.txt
 	rm $(CURDIR)/debian/ipython/usr/share/doc/ipython/pycon.ico
 
+	install -m 755 debian/ipython.sh $(CURDIR)/debian/ipython/usr/bin/ipython
 	# add wrapper scripts for all python versions
 	set -e ;\
 	for pyvers in $(PYVERS); do \
-	    sed "1s|bin/python|bin/python$$pyvers|" $(CURDIR)/debian/ipython/usr/bin/ipython > \
-	                                            $(CURDIR)/debian/ipython/usr/bin/ipython$$pyvers ;\
-	    ln -s ipython.1.gz $(CURDIR)/debian/ipython/usr/share/man/man1/ipython$$pyvers.1.gz ;\
+	    dh_link /usr/bin/ipython /usr/bin/ipython$$pyvers;\
+	    dh_link /usr/share/man/man1/ipython.1.gz /usr/share/man/man1/ipython$$pyvers.1.gz; \
 	done
-	chmod 755 $(CURDIR)/debian/ipython/usr/bin/ipython*	
 
 	# change permission on scripts
 	chmod a-x $(CURDIR)/debian/ipython/usr/share/doc/ipython/examples/*
